roles/ingress/templates/demo-ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
  namespace: default
  labels:
    app: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.192.168.50.101.xip.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - kind: Service
          name: nginx-clusterip
          namespace: default
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 1ms
          scheme: http
          strategy: RoundRobin
          weight: 10
